force-app/main/default/objects/BPM_Action_Owner__mdt/BPM_Action_Owner__mdt.object-meta.xml
<CustomObject>
    <label>BPM Action Owner Targeted Alert</label>
    <pluralLabel>BPM Action Owner Targeted Alerts</pluralLabel>
</CustomObject>