force-app/main/default/objects/BPM_Action_Owner__mdt/fields/Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner__c</fullName>
    <label>Action Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>