force-app/main/default/objects/BPM_Action_Owner__mdt/fields/CCPerson__c.field-meta.xml
<CustomField>
    <fullName>CCPerson__c</fullName>
    <label>CCPerson</label>
    <length>50</length>
    <type>Text</type>
</CustomField>