force-app/main/default/objects/BPM_Action_Owner__mdt/fields/Notification_Sequential_Order__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sequential_Order__c</fullName>
    <label>Notification Sequential Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>