force-app/main/default/objects/BPM_Action_Owner__mdt/fields/Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Reason_Type__c</fullName>
    <label>Reason Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>